Final code updates Changed indentation, fixed row length, updated Javadoc and simplified some code. (Due to time constraints, most files have not been simplified nearly as much as they could be.)